package net.proselyte.basepatterns.behavioral.observer;

import java.util.List;

public class Subscriber  {
    String name;

    public Subscriber(String name) {
        this.name = name;
    }

}
